[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyopp"
version = "0.0.7"
description = "Over-powered print(er) for Python."
readme = "README.md"
requires-python = ">=3.10.4"
license = { text = 'MIT' }
authors = [{ name = "Wayde Gilliam", email = "waydegilliam@gmail.com" }]
keywords = ["python", "console", "pprint"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet",
]
dependencies = ["pygments~=2.0.0"]

[project.urls]
Homepage = "https://github.com/waydegg/pyopp"
Source = "https://github.com/waydegg/pyopp"

[project.scripts]
pyopp = "pyopp.cli:main"

[tool.hatch.build]
only-packages = true
